# agent-me

./: .env.example  .gitignore  AGENT.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
desktop/: README.md  package.json
desktop/frontend/: app.js  index.html  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
packaging/: agent-kernel.spec  kernel_entry.py
scripts/: build_kernel.py  make_icons.py  smoke_lmstudio.py  smoke_mcp.py
src/agent_cli/: __init__.py  __main__.py  repl.py
src/agent_kernel/: __init__.py  __main__.py  config.py  events.py  permissions.py
src/agent_kernel/agent/: __init__.py  loop.py
src/agent_kernel/api/: __init__.py  app.py
src/agent_kernel/mcp/: __init__.py  client.py  manager.py  server.py
src/agent_kernel/providers/: __init__.py  anthropic.py  base.py  factory.py  lmstudio.py  ollama.py  openai.py  openai_compat.py
src/agent_kernel/session/: __init__.py  store.py
src/agent_kernel/tools/: __init__.py  native.py  registry.py
tests/: conftest.py  test_agent_loop.py  test_anthropic_translate.py  test_events.py  test_factory.py  test_files_and_sessions.py  test_frontend.py  test_health.py  test_lmstudio.py  test_mcp_client.py  test_mcp_integration.py  test_mcp_server.py  test_native_tools.py  test_ollama.py  test_openai_provider.py  test_permissions.py  test_providers.py  test_registry.py  test_session_store.py  test_ws_cancel.py  test_ws_integration.py
tests/fixtures/: mcp_echo_server.py
