[package]
name = "agent-me-desktop"
version = "0.0.1"
description = "agent-me desktop shell: spawns the Python kernel as a sidecar and hosts the chat UI"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Tiny blocking HTTP client used only to health-check the kernel on startup.
ureq = "2"

[features]
# Enabled by `tauri build`; disabled during `tauri dev`.
custom-protocol = ["tauri/custom-protocol"]
